--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mssql": "^8.0.2",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "node-xlsx": "^0.21.0",
     "oracledb": "^5.3.0",
     "qs": "^6.10.3",
     "svg-captcha": "^1.4.0",
